# DigitalRace_SourceCode_2020

./: .gitignore  Dockerfile  README.md
DiRa_latest/team1000/: CMakeLists.txt  package.xml
DiRa_latest/team1002/: CMakeLists.txt  README.md  package.xml
DiRa_latest/team1003/: CMakeLists.txt  package.xml
DiRa_latest/team1004/: CMakeLists.txt  package.xml
cdsntu/: CMakeLists.txt  package.xml
cdsntu/include/: ControlCar.h  DetectLane.h  DetectObstacle.h  DetectSign.h  header.h
cdsntu/launch/: cdsntu.launch
cdsntu/src/: ControlCar.cpp  DetectLane.cpp  DetectObstacle.cpp  DetectSign.cpp  DetectTree.cpp  main.cpp
cdsntu1/: CMakeLists.txt  package.xml
cdsntu1/include/: ControlCar.h  DetectLane.h  DetectObstacle.h  DetectSign.h  header.h
cdsntu1/launch/: cdsntu1.launch
cdsntu1/src/: ControlCar.cpp  DetectLane.cpp  DetectObstacle.cpp  DetectSign.cpp  main.cpp
cdsntu2/: CMakeLists.txt
cdsntu2/include/: ControlCar.h  DetectLane.h  DetectObstacle.h  DetectSign.h  DetectTree.h  header.h
cdsntu2/launch/: cdsntu2.launch
cdsntu2/model/: sign.xml
cdsntu2/src/: ControlCar.cpp  DetectLane.cpp  DetectObstacle.cpp  DetectSign.cpp  main.cpp
cdsntu2_9_12_2019/include/: ControlCar.h  DetectObstacle.h  DetectSign.h  header.h
cdsntu2_9_12_2019/src/: ControlCar.cpp  DetectLane.cpp  DetectSign.cpp  main.cpp
cdsntu2_backup_9_12_clean1/: package.xml
cdsntu2_backup_9_12_clean1/include/: ControlCar.h  DetectSign.h  header.h
cdsntu2_backup_9_12_clean1/src/: ControlCar.cpp  (+3 more)
cdsntu2_bk1/: CMakeLists.txt
cdsntu3/: CMakeLists.txt  package.xml
cdsntu4/: CMakeLists.txt  package.xml
roadml/: CMakeLists.txt  package.xml
roadml/include/: DetectObstacle.h  DetectSign.h  header.h
roadml/launch/: auto.launch  roadml.launch
roadml/model/: final-road-seg-model-v2-map2.h5  final-road-seg-model-v4-map4.h5
roadml/script/: header.py  roadML.py
roadml/src/: DetectObstacle.cpp  DetectSign.cpp  main.cpp
(+73 files in other folders)
